SkyXplore - Use the common ProgressBar for Surface and Queue